--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   ionicons: ^0.1.2
   google_fonts: ^6.2.1
   flutter_product_card: ^0.0.2
+  http: ^1.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
