--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_floating_bottom_bar: ^1.3.0
-  file_picker: ^10.3.3
+  file_picker: ^10.3.7
   sqflite: ^2.4.2
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
